# test-cmake-findpython

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
